Added project cards and refactored links

--- a/index.html
+++ b/index.html
@@ -20,15 +20,49 @@
       <div class="links">
         <ul>
           <li>
-            <a href="https://github.com/g4brielklein" target="_blank">Github</a>
+            <a href="https://codetab.dev" target="_blank">
+              <div class="card">
+                <div class="card-title">
+                  <p>CodeTab</p>
+                </div>
+                <div class="card-content">
+                  <p>
+                    CodeTab is a place for developers 
+                    produce and find useful tutorials 
+                    and coding tips
+                  </p>
+                </div>
+                <div class="card-link">
+                  <p>codetab.dev</p>
+                </div>
+                <div class="in-development-tag">
+                  <span>In development</span>
+                </div>
+              </div>
+            </a>
           </li>
           <li>
-            <a href="https://linkedin.com/in/g4brielklein" target="_blank"
-              >Linkedin</a
-            >
+            <a href="#">
+              <div class="card">
+                <div class="card-title">
+                  <p>Pomodoro Timer</p>
+                </div>
+                <div class="card-content">
+                  <p>
+                    A productivity timer based 
+                    on the pomodoro technique 
+                    and designed for developers
+                  </p>
+                </div>
+                <div class="card-link">
+                  <p></p>
+                </div>
+                <div class="in-development-tag">
+                  <span>In development</span>
+                </div>
+              </div>
+            </a>
           </li>
-          <li><a href="https://codetab.dev" target="_blank">CodeTab</a></li>
-          <li><a href="#">Pomodoro Timer</a></li>
         </ul>
       </div>
       <div class="social-links">
