Added profile info and improved style

--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
       <div class="profile">
         <img src="https://github.com/g4brielklein.png" alt="Profile picture" />
         <p>Gabriel Klein</p>
+        <div class="profile-info">
+          <p>Hi, I'm a Full Stack Software Developer 👋</p>
+          <p>Working with JavaScript, NodeJS, AngularJS, ReactJS and PostgreSQL</p>
+        </div>
       </div>
       <div class="switch" onclick="changeTheme()">
         <span class="track"></span>
         <button id="theme-button"></button>
       </div>
       <div class="links">
+        <p class="projects-title">Personal projects</p>
         <ul>
           <li>
             <a href="https://codetab.dev" target="_blank">
@@ -27,7 +32,7 @@
                 </div>
                 <div class="card-content">
                   <p>
-                    CodeTab is a place for developers 
+                    A place for developers 
                     produce and find useful tutorials 
                     and coding tips
                   </p>
@@ -49,8 +54,8 @@
                 </div>
                 <div class="card-content">
                   <p>
-                    A productivity timer based 
-                    on the pomodoro technique 
+                    A productivity timer based
+                    on the pomodoro technique
                     and designed for developers
                   </p>
                 </div>
